# sized-matrix-rs

./: CHANGELOG.md  Cargo.toml  README.md
doc/: transform.md
src/: array_helpers.rs  lib.rs  matrix.rs  traits.rs  vector.rs
tests/: matrix.rs  vector.rs  version-numbers.rs
